k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend

        image: backend:v1

        imagePullPolicy: Never

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
