k8s/frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-blue

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend
      version: blue

  template:
    metadata:
      labels:
        app: frontend
        version: blue

    spec:
      containers:
      - name: frontend-blue

        image: frontend-blue:v1

        imagePullPolicy: Never

        ports:
        - containerPort: 3100

        readinessProbe:
          httpGet:
            path: /health
            port: 3100

        livenessProbe:
          httpGet:
            path: /health
            port: 3100
