k8s/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-green

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend
      version: green

  template:
    metadata:
      labels:
        app: frontend
        version: green

    spec:
      containers:
      - name: frontend-green

        image: frontend-green:v1

        imagePullPolicy: Never

        ports:
        - containerPort: 3200

        readinessProbe:
          httpGet:
            path: /health
            port: 3200

        livenessProbe:
          httpGet:
            path: /health
            port: 3200
